fix width styling on mobile

--- a/src/base.css
+++ b/src/base.css
@@ -48,7 +48,12 @@ Layout
  */
 body {
   height: 100vh;
-  padding: 1rem 30% 0;
+  max-width: 1200px;
+  padding-top: 1rem;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
   row-gap: 2rem;
